# AI-Agents

./: README.md
crewai/trip_planner/: README.md  main.py  notes.txt  pyproject.toml  trip_agents.py  trip_tasks.py
crewai/trip_planner/tools/: __init__.py  browser_tools.py  calculator_tools.py  search_tools.py
